<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        android:id="@+id/container"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity"
            android:backgroundTint="@color/cardview_shadow_start_color">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/cardView"
            android:layout_marginTop="30dp">

        <TextView
                android:id="@+id/textView8"
                android:text="@string/zip_codes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#FA090808"/>

        <EditText
                android:id="@+id/zip_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zip_code"
                android:textSize="16sp"
                android:ems="10"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="70dp"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:textColor="#FD050505"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/cardView2">
        <TextView
                android:id="@+id/units"
                android:text="@string/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/zip_code"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"

                android:padding="10dp"
                android:paddingTop="25dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#F80C0C0C"/>

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/units"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="70dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp">

        </Spinner>
    </android.support.v7.widget.CardView>
    <Button
            android:text="SEARCH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="#FD030303"
            android:textColorHint="#FFFFFF"
            android:background="#FFFFFF"
            android:fadingEdge="horizontal|vertical"/>
    </android.support.constraint.ConstraintLayout>
    </FrameLayout>
